@@ -1,11 +1,10 @@
-package com.jsoniter.benchmark.with_long_string;
+package com.jsoniter.benchmark.with_double_array;
 
 import com.jsoniter.DecodingMode;
 import com.jsoniter.JsonIterator;
 import com.jsoniter.benchmark.All;
 import com.jsoniter.output.EncodingMode;
 import com.jsoniter.output.JsonStream;
-import com.jsoniter.spi.TypeLiteral;
 import org.junit.Test;
 import org.openjdk.jmh.Main;
 import org.openjdk.jmh.annotations.*;
@@ -13,56 +12,62 @@ import org.openjdk.jmh.infra.BenchmarkParams;
 import org.openjdk.jmh.infra.Blackhole;
 import org.openjdk.jmh.runner.RunnerException;
 
+import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.util.concurrent.TimeUnit;
 
 import static org.junit.Assert.assertEquals;
 
 /*
-Benchmark            Mode  Cnt       Score      Error  Units
-DeserJsoniter.deser  avgt    5  134067.924 ± 2869.475  ns/op
+Benchmark        Mode  Cnt       Score      Error  Units
+SerJsoniter.ser  avgt    5  249945.866 ± 8742.037  ns/op
  */
 @State(Scope.Thread)
-public class DeserJsoniter {
+public class SerJsoniter {
 
-    private byte[] testJSON;
-    private JsonIterator iter;
-    private TypeLiteral<TestObject> typeLiteral;
+    private TestObject testObject;
+    private JsonStream stream;
+    private ByteArrayOutputStream byteArrayOutputStream;
 
     @Setup(Level.Trial)
     public void benchSetup(BenchmarkParams params) {
         JsonStream.setMode(EncodingMode.DYNAMIC_MODE);
         JsonIterator.setMode(DecodingMode.DYNAMIC_MODE_AND_MATCH_FIELD_WITH_HASH);
-        testJSON = TestObject.createTestJSON();
-        iter = new JsonIterator();
-        typeLiteral = TypeLiteral.create(TestObject.class);
+        testObject = TestObject.createTestObject();
+        stream = new JsonStream(null, 512);
+        byteArrayOutputStream = new ByteArrayOutputStream();
     }
 
     @Benchmark
     @BenchmarkMode(Mode.AverageTime)
     @OutputTimeUnit(TimeUnit.NANOSECONDS)
-    public void deser(Blackhole bh) throws IOException {
+    public void ser(Blackhole bh) throws IOException {
         for (int i = 0; i < 1000; i++) {
-            iter.reset(testJSON);
-            bh.consume(iter.read(typeLiteral));
+            byteArrayOutputStream.reset();
+            stream.reset(byteArrayOutputStream);
+            stream.writeVal(testObject);
+            stream.flush();
+            bh.consume(byteArrayOutputStream);
         }
     }
 
     @Test
     public void test() throws IOException {
         benchSetup(null);
-        iter.reset(testJSON);
-        assertEquals("", iter.read(typeLiteral).field1);
+        byteArrayOutputStream.reset();
+        stream.reset(byteArrayOutputStream);
+        stream.writeVal(testObject);
+        stream.flush();
+        assertEquals("{\"field1\":\"\"}", byteArrayOutputStream.toString());
     }
 
     public static void main(String[] args) throws IOException, RunnerException {
         All.loadJMH();
         Main.main(new String[]{
-                "with_long_string.DeserJsoniter",
+                "with_double_array.SerJsoniter",
                 "-i", "5",
                 "-wi", "5",
                 "-f", "1",
-//                "-jvmArgsAppend", "--add-exports java.base/java.lang=ALL-UNNAMED",
         });
     }
 }
